--- a/src/composer.json
+++ b/src/composer.json
@@ -12,7 +12,9 @@
     },
     "require": {
         "magento/product-community-edition": "2.3.5",
-        "scandipwa/installer": "^3.0.0"
+        "scandipwa/installer": "^3.0.0",
+        "scandipwa/paypal-graphql": "^3.0",
+        "scandipwa/sample-data": "^1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.13.0",
