--- a/src/composer.json
+++ b/src/composer.json
@@ -11,6 +11,8 @@
         "sort-packages": true
     },
     "require": {
+        "magefan/module-blog": "^2.9.7",
+        "magefan/module-blog-graph-ql": "^2.1",
         "magento/product-community-edition": "2.3.5",
         "scandipwa/installer": "^3.0.0",
         "scandipwa/paypal-graphql": "^3.0",
